syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.bytes.jtim.core.protocol.protobuf";
option java_outer_classname = "TestProto";
//option objc_class_prefix = "WY";

package onlytest; //package声明符, 区分

//定义服务
service Greeter {
    //注意：这里是returns 不是return
    rpc TestSomeThing (TestRequest) returns (TestResponse) {
    }
}

//定义消息类型
message TestRequest {
    string name = 1;

    //    enum PhoneType //枚举消息类型
    //    {
    //        MOBILE = 0; //proto3版本中，首成员必须为0，成员不应有相同的值
    //        HOME = 1;
    //        WORK = 2;
    //    }
}
message TestResponse {
    string message = 1;
}